fix layout bug

--- a/src/edits/Modify.css
+++ b/src/edits/Modify.css
@@ -48,6 +48,7 @@
       flex: 1;
       border: none;
       border-bottom: 1px solid #ccc;
+      background-color: transparent;
       padding: 6px 10px 5px;
       font-size: 20px;
       color: #444;
@@ -101,6 +102,7 @@
         flex: 1;
         border: none;
         border-bottom: 1px solid #ccc;
+        background-color: transparent;
         padding: 6px 10px 5px;
         font-size: 14px;
         color: #444;
@@ -125,6 +127,7 @@
         border: none;
         border-right: 1px solid #eee;
         border-bottom: 1px solid #ccc;
+        background-color: transparent;
         padding: 6px 10px 5px;
         font-size: 14px;
         color: #444;
