--- a/src/trips/HeaderEdit.css
+++ b/src/trips/HeaderEdit.css
@@ -13,7 +13,8 @@
     gap: 5px;
 
     @media (max-width: 600px) {
-      margin-left: 5px;
+      margin-left: 20px;
+      margin-right: 8px;
     }
 
     .text {
@@ -32,7 +33,6 @@
       }
 
       @media (max-width: 600px) {
-        margin-left: 20px;
         flex: 1;
         width: 0;
       }
