--- a/src/trips/HeaderShare.css
+++ b/src/trips/HeaderShare.css
@@ -12,13 +12,17 @@
     align-items: center;
     gap: 5px;
 
+    @media (max-width: 600px) {
+      margin-left: 20px;
+      margin-right: 8px;
+    }
+
     .text {
       padding: 2px 2px 3px;
       font-size: 32px;
       font-weight: bold;
 
       @media (max-width: 600px) {
-        margin-left: 20px;
         flex: 1;
       }
 
